<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.s.iraqiholidays.services.Register">

    <include layout="@layout/toolbar"
        android:id="@+id/include"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="294dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/form_border"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/signup_title"
                android:textColor="@android:color/black"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/first_name_text"
                android:inputType="textAutoComplete"
                android:padding="12dp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/father_grandpa_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/father_grandpa_text"
                android:inputType="textAutoComplete"
                android:padding="12dp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/father_grandpa_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/phone_number_text"
                android:inputType="phone"
                android:padding="12dp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:background="@drawable/edittext_border"
                android:gravity="right"
                android:layout_below="@+id/phone_number"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:padding="12dp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:gravity="right"
                android:hint="@string/password2_text"
                android:inputType="textPassword"
                android:padding="12dp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/gender_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password2"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:text="@string/gender_text"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/linear_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender_title"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female_text" />

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male_text" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_one"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/note_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_conditions"
                    android:textColor="@android:color/black" />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/action_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_two"
                android:layout_marginTop="25dp"
                android:background="@drawable/button"
                android:text="@string/action_signup"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
