<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.s.iraqiholidays.services.Booking">

    <include
        android:id="@+id/bar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/date_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/label1">

            </android.support.v7.widget.AppCompatSpinner>

            <TextView
                android:id="@+id/label2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_label"
                android:textColor="@android:color/black"
                android:layout_below="@+id/date_spinner"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/hotel_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/label2">

            </android.support.v7.widget.AppCompatSpinner>

            <LinearLayout
                android:id="@+id/linear_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_below="@+id/hotel_spinner">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/trible_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10">

                </android.support.v7.widget.AppCompatSpinner>

                <TextView
                    android:id="@+id/triple_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/triple_label_text"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/double_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10">

                </android.support.v7.widget.AppCompatSpinner>

                <TextView
                    android:id="@+id/double_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/double_label_text"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/single_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10">

                </android.support.v7.widget.AppCompatSpinner>

                <TextView
                    android:id="@+id/single_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/single_label_text"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/linear_one">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/label3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/prices_label_text"
                android:textColor="@color/green"
                android:layout_below="@+id/recycler_view_1"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/label3">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/continue_process"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_process_text"
                android:textColor="@android:color/white"
                android:background="@drawable/button"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/recycler_view_2"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
