<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.tech.s.iraqiholidays.services.Login">

    <include layout="@layout/toolbar"
        android:id="@+id/include" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_border"
            android:padding="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textSize="26sp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:layout_marginTop="30dp"
                android:hint="@string/email_text"
                android:layout_below="@+id/title"
                android:background="@drawable/edittext_border"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:gravity="right"
                android:padding="12dp"
                android:hint="@string/password_text"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/email"
                android:background="@drawable/edittext_border"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/action_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textColor="@android:color/white"
                android:background="@drawable/button"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/password"/>

            <TextView
                android:id="@+id/action_recovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/recovery_text"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/action_login"/>

            <TextView
                android:id="@+id/action_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/register_text"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/action_recovery"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
