<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="12dp"
    app:cardPreventCornerOverlap="true"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/p_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/p_image" />

        <TextView
            android:id="@+id/p_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="مشهد"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginTop="20sp"
            android:layout_below="@+id/p_image"/>

        <TextView
            android:id="@+id/p_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="شركة البركة للسفر و السياحة"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/p_name"/>

        <TextView
            android:id="@+id/p_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_below="@+id/p_company"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/p_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="USD 0\nافضل الاسعار"
            android:textColor="@color/green"
            android:layout_below="@id/p_desc"/>

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:layout_below="@+id/p_price"/>

        <Button
            android:id="@+id/detials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/add_to_cart"
            android:background="@drawable/button"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>